[package]
name = "pyodide_wasm_runtime_layer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Juniper Tyree <juniper.tyree@helsinki.fi>",
    "Freja Roberts <ten3roberts@gmail.com>",
    "Douglas Dwyer <dougmdwyer@hotmail.com>",
    "Tei Leelo Roberts <ten3roberts@gmail.com>",
]
repository = "https://github.com/juntyr/pyodide-wasm-runtime-layer"
readme = "README.md"
description = """
WASM runtime compatibility interface implementation for the webbrowser
WebAssembly runtime, exposed through Pyodide.
"""

[dependencies]
anyhow = { version = "1.0", default-features = false, features = [ "std" ] }
fxhash = { version = "0.2", default-features = false }
wasm_runtime_layer = { version = "0.2", default-features = false }

tracing = { version = "0.1", default-features = false, optional = true }
slab = { version = "0.4", default-features = false }
wasm-bindgen = { version = "0.2", default-features = false }
js-sys = { version = "0.3", default-features = false }
wasmparser = { version = "0.118", default-features = false }
