[package]
name = "pyodide-webassembly-runtime-layer"
version = "0.11.0"
edition = "2021"
rust-version = "1.76"
license = "MIT OR Apache-2.0"
authors = [
    "Juniper Tyree <juniper.tyree@helsinki.fi>",
    "Freja Roberts <ten3roberts@gmail.com>",
    "Douglas Dwyer <dougmdwyer@hotmail.com>",
]
repository = "https://github.com/juntyr/pyodide-webassembly-runtime-layer"
readme = "README.md"
description = """
WASM runtime compatibility interface implementation for the webbrowser
WebAssembly runtime, exposed through Pyodide.
"""
exclude = [
    "/.github", "/.gitignore",
    "/src/features/*.wat", "/src/features/wat2wasm.sh",
]

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
flagset = { version = "0.4.5", default-features = false, features = ["std"] }
fxhash = { version = "0.2", default-features = false }
pyo3 = { version = "0.27", default-features = false, features = ["macros"] }
pyo3-error = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
wasmparser = { version = "0.240", default-features = false, features = ["std", "features", "validate", "simd"] }
wasm_runtime_layer = { version = "0.6", default-features = false }
wobbly = { version = "0.1", default-features = false, features = ["std"] }

[features]
tracing = ["dep:tracing"]
